   o #298884 by neclimdul: Requested missing filter to filter for whether a user has a picture or not.
   o #336531 by dww: Set boolean filter to not use a checkbox which is lesser UI.
   o #338632 by drewish: Remove use of format_rss_channel and use proper templating instead.
   o #326034 by yched: Allow short names in admin summaries via new "title short" definition.
   o #335613 by swentel: Add hook_views_api() setting to bulk export.
   o #339707 by nedjo: Add filter to show child translations.
   o #284768 by drewish: Proper templates for RSS feeds rather than format_rss_item().

Views 2.3
  Bugs fixed:
    o #349739: Fix arguments not getting transmitted to attachment displays properly.
    o #354707: Display attachment happened too early preventing default arguments from passing to the attachment.
    o #277321 by nedjo: Use AJAX properly supports summaries in attachments.
    o #291292 by sammys (reroll by jaydub): Proper use of DISTINCT on summary views on pgsql.
    o #291079 by sammys (reroll by jaydub): Fix use of GROUP BY on pgsql.
    o #295246 by webchick: Wrong table type on views object cache caused truncation of cached data and mysterious errors on large views.
    o #315007 by Garrett Albright, Paul Kishimoto and catch: Take into account page count when using comment new link.
    o #317562 by ingaro: Wrong date format for PGSQL.
    o #327604 by mr.baileys: Fix improper use of multibyte library when mb library unavailable.
    o #335926 by sapark and drewish: "January, 2009" should be "January 2009".
    o #341263 by cdale: Prevent exposed filter forms from processing during batch operations.
    o #342322 by drewish: Correct label for translation status.

  Other changes:
    o #288801 by drewish and eaton: Aggregator item support! Make views of feeds!
    o #335647 by markus_petrux: Add memory and a reset button to the Views list page.