@@ -1,5 +1,5 @@
 <?php
-// $Id: handlers.inc,v 1.103 2009-01-07 20:14:46 merlinofchaos Exp $
+// $Id: handlers.inc,v 1.104 2009-01-07 23:31:12 merlinofchaos Exp $
 /**
  * @file handlers.inc
  * Defines the various handler objects to help build and display views.
@@ -471,6 +471,19 @@ class views_handler extends views_object {
       return drupal_clone($join);
     }
   }
+
+  /**
+   * Validates the handler against the complete View.
+   *
+   * This is called when the complete View is being validated. For validating
+   * the handler options form use options_validate().
+   *
+   * @see views_handler::options_validate()
+   *
+   * @return
+   *   Empty array if the handler is valid; an array of error strings if it is not.
+   */
+  function validate() { return array(); }
 
   /**
    * Determine if the handler is considered 'broken', meaning it's a
