@@ -1,5 +1,5 @@
 <?php
-// $Id: plugins.inc,v 1.151 2008-10-28 19:23:50 merlinofchaos Exp $
+// $Id: plugins.inc,v 1.152 2009-01-07 23:31:12 merlinofchaos Exp $
 /**
  * @file plugins.inc
  * Built in plugins for Views output handling.
@@ -241,10 +241,10 @@ function views_views_plugins() {
 /**
  * Builds and return a list of all plugins available in the system.
  *
- * @return Nested array of plugins, grouped by type and
+ * @return Nested array of plugins, grouped by type.
  */
 function views_discover_plugins() {
-  $cache = array('display' => array(), 'style' => array(), 'row' => array());
+  $cache = array('display' => array(), 'style' => array(), 'row' => array(), 'argument default' => array(), 'argument validator' => array(), 'access' => array());
   // Get plugins from all mdoules.
   foreach (module_implements('views_plugins') as $module) {
     $function = $module . '_views_plugins';
